# packages/contracts/openapi/api-server.yaml
@@ -1689,7 +1689,7 @@ components:
           type: string
     AdminLoginResponse:
       type: object
-      required: [token, user_id, username, roles]
+      required: [token, user_id, username, roles, permissions]
       properties:
         token:
           type: string
@@ -1698,6 +1698,10 @@ components:
         username:
           type: string
         roles:
+          type: array
+          items:
+            type: string
+        permissions:
           type: array
           items:
             type: string
